--- a/src/DagAir_Addresses/DagAir.Addresses/swagger.adoc
+++ b/src/DagAir_Addresses/DagAir.Addresses/swagger.adoc
@@ -14,6 +14,49 @@ __Version__ : v1
 [[_paths]]
 == Paths
 
+[[_addresses-api_addresses_post]]
+=== POST /addresses-api/addresses
+
+==== Parameters
+
+[options="header", cols=".^2a,.^3a,.^4a"]
+|===
+|Type|Name|Schema
+|**Body**|**body** +
+__optional__|<<_addnewaddresscommand,AddNewAddressCommand>>
+|===
+
+
+==== Responses
+
+[options="header", cols=".^2a,.^14a,.^4a"]
+|===
+|HTTP Code|Description|Schema
+|**201**|Success|<<_addressdtojsonapidocument,AddressDtoJsonApiDocument>>
+|**400**|Bad Request|<<_jsonapierror,JsonApiError>>
+|===
+
+
+==== Consumes
+
+* `application/json-patch+json`
+* `application/json`
+* `text/json`
+* `application/*+json`
+
+
+==== Produces
+
+* `text/plain`
+* `application/json`
+* `text/json`
+
+
+==== Tags
+
+* Addresses
+
+
 [[_addresses-api_addresses_addressid_get]]
 === Returns information about an address with a given addressId
 ....
@@ -175,6 +218,23 @@ __required__|integer (int64)
 [[_definitions]]
 == Definitions
 
+[[_addnewaddresscommand]]
+=== AddNewAddressCommand
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**addressDto** +
+__optional__|<<_addressdto,AddressDto>>
+|**cityDto** +
+__optional__|<<_citydto,CityDto>>
+|**countryDto** +
+__optional__|<<_countrydto,CountryDto>>
+|**postalCodeDto** +
+__optional__|<<_postalcodedto,PostalCodeDto>>
+|===
+
+
 [[_addressdto]]
 === AddressDto
 
@@ -220,7 +280,7 @@ __optional__|< <<_addressdto,AddressDto>> > array
 |**id** +
 __optional__|integer (int64)
 |**name** +
-__optional__|string
+__required__|string
 |===
 
 
@@ -246,7 +306,7 @@ __optional__|< <<_addressdto,AddressDto>> > array
 |**id** +
 __optional__|integer (int64)
 |**name** +
-__optional__|string
+__required__|string
 |===
 
 
@@ -286,7 +346,7 @@ __optional__|< <<_addressdto,AddressDto>> > array
 |**id** +
 __optional__|integer (int64)
 |**number** +
-__optional__|string
+__required__|string
 |===
 
 
