--- a/src/DagAir_Facilities/DagAir.Facilities/swagger.adoc
+++ b/src/DagAir_Facilities/DagAir.Facilities/swagger.adoc
@@ -15,7 +15,7 @@ __Version__ : v1
 == Paths
 
 [[_facilities-api_affiliates_post]]
-=== Creates a new affiliate with parameters specified in addNewAffiliateCommand
+=== Create a new affiliate with parameters specified in addNewAffiliateCommand
 ....
 POST /facilities-api/affiliates
 ....
@@ -38,6 +38,7 @@ __optional__|<<_addnewaffiliatecommand,AddNewAffiliateCommand>>
 |HTTP Code|Description|Schema
 |**201**|Success|<<_affiliatedtojsonapidocument,AffiliateDtoJsonApiDocument>>
 |**400**|Bad Request|<<_jsonapierror,JsonApiError>>
+|**409**|Conflict|<<_jsonapierror,JsonApiError>>
 |===
 
 
@@ -150,8 +151,9 @@ __optional__|<<_addneworganizationcommand,AddNewOrganizationCommand>>
 [options="header", cols=".^2a,.^14a,.^4a"]
 |===
 |HTTP Code|Description|Schema
-|**201**|Success|<<_affiliatedtojsonapidocument,AffiliateDtoJsonApiDocument>>
+|**201**|Success|<<_organizationdtojsonapidocument,OrganizationDtoJsonApiDocument>>
 |**400**|Bad Request|<<_jsonapierror,JsonApiError>>
+|**409**|Conflict|<<_jsonapierror,JsonApiError>>
 |===
 
 
@@ -243,6 +245,54 @@ __required__|integer (int64)
 * Organizations
 
 
+[[_facilities-api_rooms_post]]
+=== Create a new room with parameters specified in addNewRoomCommand
+....
+POST /facilities-api/rooms
+....
+
+
+==== Parameters
+
+[options="header", cols=".^2a,.^3a,.^4a"]
+|===
+|Type|Name|Schema
+|**Body**|**body** +
+__optional__|<<_addnewroomcommand,AddNewRoomCommand>>
+|===
+
+
+==== Responses
+
+[options="header", cols=".^2a,.^14a,.^4a"]
+|===
+|HTTP Code|Description|Schema
+|**201**|Success|<<_roomdtojsonapidocument,RoomDtoJsonApiDocument>>
+|**400**|Bad Request|<<_jsonapierror,JsonApiError>>
+|**409**|Conflict|<<_jsonapierror,JsonApiError>>
+|===
+
+
+==== Consumes
+
+* `application/json-patch+json`
+* `application/json`
+* `text/json`
+* `application/*+json`
+
+
+==== Produces
+
+* `text/plain`
+* `application/json`
+* `text/json`
+
+
+==== Tags
+
+* Room
+
+
 [[_facilities-api_rooms_roomid_get]]
 === Returns information about a room with a given roomId
 ....
@@ -326,16 +376,29 @@ __optional__|<<_organizationdto,OrganizationDto>>
 |===
 
 
+[[_addnewroomcommand]]
+=== AddNewRoomCommand
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**roomDto** +
+__optional__|<<_roomdto,RoomDto>>
+|===
+
+
 [[_affiliatedto]]
 === AffiliateDto
 
 [options="header", cols=".^3a,.^4a"]
 |===
 |Name|Schema
+|**addressId** +
+__optional__|integer (int64)
 |**id** +
 __optional__|integer (int64)
 |**name** +
-__optional__|string
+__required__|string
 |**organization** +
 __optional__|<<_organizationdto,OrganizationDto>>
 |**organizationId** +
@@ -394,7 +457,7 @@ __optional__|< <<_affiliatedto,AffiliateDto>> > array
 |**id** +
 __optional__|integer (int64)
 |**name** +
-__optional__|string
+__required__|string
 |===
 
 
