--- a/src/DagAir_AdminNode/DagAir.AdminNode/swagger.adoc
+++ b/src/DagAir_AdminNode/DagAir.AdminNode/swagger.adoc
@@ -167,6 +167,41 @@ __required__|integer (int64)
 * AffiliatesAdmin
 
 
+[[_admin-node_affiliates_affiliateid_delete]]
+=== DELETE /admin-node/affiliates/{affiliateId}
+
+==== Parameters
+
+[options="header", cols=".^2a,.^3a,.^4a"]
+|===
+|Type|Name|Schema
+|**Path**|**affiliateId** +
+__required__|integer (int64)
+|===
+
+
+==== Responses
+
+[options="header", cols=".^2a,.^14a,.^4a"]
+|===
+|HTTP Code|Description|Schema
+|**204**|Success|No Content
+|**404**|Not Found|<<_jsonapierror,JsonApiError>>
+|===
+
+
+==== Produces
+
+* `text/plain`
+* `application/json`
+* `text/json`
+
+
+==== Tags
+
+* AffiliatesAdmin
+
+
 [[_admin-node_organizations_post]]
 === POST /admin-node/organizations
 
@@ -277,6 +312,41 @@ __required__|integer (int64)
 * FacilitiesAdmin
 
 
+[[_admin-node_organizations_organizationid_delete]]
+=== DELETE /admin-node/organizations/{organizationId}
+
+==== Parameters
+
+[options="header", cols=".^2a,.^3a,.^4a"]
+|===
+|Type|Name|Schema
+|**Path**|**organizationId** +
+__required__|integer (int64)
+|===
+
+
+==== Responses
+
+[options="header", cols=".^2a,.^14a,.^4a"]
+|===
+|HTTP Code|Description|Schema
+|**204**|Success|No Content
+|**404**|Not Found|<<_jsonapierror,JsonApiError>>
+|===
+
+
+==== Produces
+
+* `text/plain`
+* `application/json`
+* `text/json`
+
+
+==== Tags
+
+* FacilitiesAdmin
+
+
 [[_admin-node_rooms_post]]
 === POST /admin-node/rooms
 
@@ -306,6 +376,125 @@ __optional__|<<_addnewroomcommand,AddNewRoomCommand>>
 * `application/json`
 * `text/json`
 * `application/*+json`
+
+
+==== Produces
+
+* `text/plain`
+* `application/json`
+* `text/json`
+
+
+==== Tags
+
+* RoomsAdmin
+
+
+[[_admin-node_rooms_get-room_post]]
+=== POST /admin-node/rooms/get-room
+
+==== Parameters
+
+[options="header", cols=".^2a,.^3a,.^4a"]
+|===
+|Type|Name|Schema
+|**Body**|**body** +
+__optional__|<<_getroomcommand,GetRoomCommand>>
+|===
+
+
+==== Responses
+
+[options="header", cols=".^2a,.^14a,.^4a"]
+|===
+|HTTP Code|Description|Schema
+|**200**|Success|<<_adminnoderoomdtojsonapidocument,AdminNodeRoomDtoJsonApiDocument>>
+|**404**|Not Found|<<_jsonapierror,JsonApiError>>
+|===
+
+
+==== Consumes
+
+* `application/json`
+* `text/json`
+* `application/*+json`
+
+
+==== Produces
+
+* `text/plain`
+* `application/json`
+* `text/json`
+
+
+==== Tags
+
+* RoomsAdmin
+
+
+[[_admin-node_rooms_historic-measurements_post]]
+=== POST /admin-node/rooms/historic-measurements
+
+==== Parameters
+
+[options="header", cols=".^2a,.^3a,.^4a"]
+|===
+|Type|Name|Schema
+|**Body**|**body** +
+__optional__|<<_getroomcommand,GetRoomCommand>>
+|===
+
+
+==== Responses
+
+[options="header", cols=".^2a,.^14a,.^4a"]
+|===
+|HTTP Code|Description|Schema
+|**200**|Success|<<_pastmeasurementsdtojsonapidocument,PastMeasurementsDtoJsonApiDocument>>
+|**400**|Bad Request|<<_jsonapierror,JsonApiError>>
+|===
+
+
+==== Consumes
+
+* `application/json`
+* `text/json`
+* `application/*+json`
+
+
+==== Produces
+
+* `text/plain`
+* `application/json`
+* `text/json`
+
+
+==== Tags
+
+* SensorStateHistoryAdmin
+
+
+[[_admin-node_rooms_roomid_delete]]
+=== DELETE /admin-node/rooms/{roomId}
+
+==== Parameters
+
+[options="header", cols=".^2a,.^3a,.^4a"]
+|===
+|Type|Name|Schema
+|**Path**|**roomId** +
+__required__|integer (int64)
+|===
+
+
+==== Responses
+
+[options="header", cols=".^2a,.^14a,.^4a"]
+|===
+|HTTP Code|Description|Schema
+|**204**|Success|No Content
+|**404**|Not Found|<<_jsonapierror,JsonApiError>>
+|===
 
 
 ==== Produces
@@ -479,6 +668,30 @@ __required__|< <<_adminnodeorganizationdto,AdminNodeOrganizationDto>> > array
 |===
 
 
+[[_adminnoderoomdto]]
+=== AdminNodeRoomDto
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**pastMeasurements** +
+__optional__|<<_pastmeasurementsdto,PastMeasurementsDto>>
+|**roomDto** +
+__optional__|<<_roomdto,RoomDto>>
+|===
+
+
+[[_adminnoderoomdtojsonapidocument]]
+=== AdminNodeRoomDtoJsonApiDocument
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**data** +
+__required__|<<_adminnoderoomdto,AdminNodeRoomDto>>
+|===
+
+
 [[_affiliatedto]]
 === AffiliateDto
 
@@ -541,6 +754,74 @@ __required__|string
 |===
 
 
+[[_expectedroomconditionsdto]]
+=== ExpectedRoomConditionsDto
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**humidity** +
+__optional__|number (double)
+|**humidityMargin** +
+__optional__|number (double)
+|**id** +
+__optional__|integer (int64)
+|**illuminance** +
+__optional__|integer (int32)
+|**illuminanceMargin** +
+__optional__|number (double)
+|**roomPolicyId** +
+__optional__|integer (int64)
+|**temperature** +
+__optional__|number (double)
+|**temperatureMargin** +
+__optional__|number (double)
+|===
+
+
+[[_getroomcommand]]
+=== GetRoomCommand
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**numberOfRecords** +
+__optional__|integer (int32)
+|**roomId** +
+__optional__|integer (int64)
+|===
+
+
+[[_historicmeasurement]]
+=== HistoricMeasurement
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**date** +
+__optional__|string (date-time)
+|**humidity** +
+__optional__|number (double)
+|**illuminance** +
+__optional__|integer (int32)
+|**temperature** +
+__optional__|number (double)
+|===
+
+
+[[_historicmeasurementroompolicydtotuple]]
+=== HistoricMeasurementRoomPolicyDtoTuple
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**item1** +
+__optional__|<<_historicmeasurement,HistoricMeasurement>>
+|**item2** +
+__optional__|<<_roompolicydto,RoomPolicyDto>>
+|===
+
+
 [[_jsonapierror]]
 === JsonApiError
 
@@ -583,6 +864,28 @@ __required__|<<_organizationdto,OrganizationDto>>
 |===
 
 
+[[_pastmeasurementsdto]]
+=== PastMeasurementsDto
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**measurements** +
+__optional__|< <<_historicmeasurementroompolicydtotuple,HistoricMeasurementRoomPolicyDtoTuple>> > array
+|===
+
+
+[[_pastmeasurementsdtojsonapidocument]]
+=== PastMeasurementsDtoJsonApiDocument
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**data** +
+__required__|<<_pastmeasurementsdto,PastMeasurementsDto>>
+|===
+
+
 [[_postalcodedto]]
 === PostalCodeDto
 
@@ -614,8 +917,6 @@ __optional__|integer (int32)
 __optional__|integer (int64)
 |**number** +
 __optional__|string
-|**uniqueRoomId** +
-__optional__|string (uuid)
 |===
 
 
@@ -627,6 +928,52 @@ __optional__|string (uuid)
 |Name|Schema
 |**data** +
 __required__|<<_roomdto,RoomDto>>
+|===
+
+
+[[_roompolicycategorydto]]
+=== RoomPolicyCategoryDto
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**categoryNumber** +
+__optional__|integer (int32)
+|**id** +
+__optional__|integer (int64)
+|**name** +
+__optional__|string
+|===
+
+
+[[_roompolicydto]]
+=== RoomPolicyDto
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**category** +
+__optional__|<<_roompolicycategorydto,RoomPolicyCategoryDto>>
+|**categoryId** +
+__optional__|integer (int64)
+|**endDate** +
+__optional__|string (date-time)
+|**endHour** +
+__optional__|integer (int32)
+|**expectedConditions** +
+__optional__|<<_expectedroomconditionsdto,ExpectedRoomConditionsDto>>
+|**expectedConditionsId** +
+__optional__|integer (int64)
+|**id** +
+__optional__|integer (int64)
+|**repeatOn** +
+__optional__|string
+|**roomId** +
+__optional__|integer (int64)
+|**startDate** +
+__optional__|string (date-time)
+|**startHour** +
+__optional__|integer (int32)
 |===
 
 
