--- a/src/DagAir_Facilities/DagAir.Facilities/swagger.adoc
+++ b/src/DagAir_Facilities/DagAir.Facilities/swagger.adoc
@@ -129,6 +129,41 @@ __required__|integer (int64)
 * Affiliates
 
 
+[[_facilities-api_affiliates_affiliateid_delete]]
+=== DELETE /facilities-api/affiliates/{affiliateId}
+
+==== Parameters
+
+[options="header", cols=".^2a,.^3a,.^4a"]
+|===
+|Type|Name|Schema
+|**Path**|**affiliateId** +
+__required__|integer (int64)
+|===
+
+
+==== Responses
+
+[options="header", cols=".^2a,.^14a,.^4a"]
+|===
+|HTTP Code|Description|Schema
+|**204**|Success|No Content
+|**404**|Not Found|<<_jsonapierror,JsonApiError>>
+|===
+
+
+==== Produces
+
+* `text/plain`
+* `application/json`
+* `text/json`
+
+
+==== Tags
+
+* Affiliates
+
+
 [[_facilities-api_organizations_post]]
 === Create a new organization with parameters specified in addNewOrganizationCommand
 ....
@@ -245,6 +280,41 @@ __required__|integer (int64)
 * Organizations
 
 
+[[_facilities-api_organizations_organizationid_delete]]
+=== DELETE /facilities-api/organizations/{organizationId}
+
+==== Parameters
+
+[options="header", cols=".^2a,.^3a,.^4a"]
+|===
+|Type|Name|Schema
+|**Path**|**organizationId** +
+__required__|integer (int64)
+|===
+
+
+==== Responses
+
+[options="header", cols=".^2a,.^14a,.^4a"]
+|===
+|HTTP Code|Description|Schema
+|**204**|Success|No Content
+|**404**|Not Found|<<_jsonapierror,JsonApiError>>
+|===
+
+
+==== Produces
+
+* `text/plain`
+* `application/json`
+* `text/json`
+
+
+==== Tags
+
+* Organizations
+
+
 [[_facilities-api_rooms_post]]
 === Create a new room with parameters specified in addNewRoomCommand
 ....
@@ -316,6 +386,41 @@ __required__|integer (int64)
 |===
 |HTTP Code|Description|Schema
 |**200**|Success|<<_roomdtojsonapidocument,RoomDtoJsonApiDocument>>
+|**404**|Not Found|<<_jsonapierror,JsonApiError>>
+|===
+
+
+==== Produces
+
+* `text/plain`
+* `application/json`
+* `text/json`
+
+
+==== Tags
+
+* Room
+
+
+[[_facilities-api_rooms_roomid_delete]]
+=== DELETE /facilities-api/rooms/{roomId}
+
+==== Parameters
+
+[options="header", cols=".^2a,.^3a,.^4a"]
+|===
+|Type|Name|Schema
+|**Path**|**roomId** +
+__required__|integer (int64)
+|===
+
+
+==== Responses
+
+[options="header", cols=".^2a,.^14a,.^4a"]
+|===
+|HTTP Code|Description|Schema
+|**204**|Success|No Content
 |**404**|Not Found|<<_jsonapierror,JsonApiError>>
 |===
 
@@ -499,8 +604,6 @@ __optional__|integer (int32)
 __optional__|integer (int64)
 |**number** +
 __optional__|string
-|**uniqueRoomId** +
-__optional__|string (uuid)
 |===
 
 
