--- a/src/DagAir_Policies/DagAir.Policies/swagger.adoc
+++ b/src/DagAir_Policies/DagAir.Policies/swagger.adoc
@@ -147,6 +147,49 @@ __optional__|<<_addnewroompolicycommand,AddNewRoomPolicyCommand>>
 * Policies
 
 
+[[_policies-api_policies_past-policies_post]]
+=== POST /policies-api/policies/past-policies
+
+==== Parameters
+
+[options="header", cols=".^2a,.^3a,.^4a"]
+|===
+|Type|Name|Schema
+|**Body**|**body** +
+__optional__|<<_getpastpoliciescommand,GetPastPoliciesCommand>>
+|===
+
+
+==== Responses
+
+[options="header", cols=".^2a,.^14a,.^4a"]
+|===
+|HTTP Code|Description|Schema
+|**200**|Success|<<_pastmeasurementsdtojsonapidocument,PastMeasurementsDtoJsonApiDocument>>
+|**400**|Bad Request|<<_jsonapierror,JsonApiError>>
+|===
+
+
+==== Consumes
+
+* `application/json-patch+json`
+* `application/json`
+* `text/json`
+* `application/*+json`
+
+
+==== Produces
+
+* `text/plain`
+* `application/json`
+* `text/json`
+
+
+==== Tags
+
+* Policies
+
+
 [[_policies-api_policies_roomid_get]]
 === Returns information about a policy currently in force in a room with a given roomId
 ....
@@ -224,23 +267,21 @@ __optional__|<<_roompolicydto,RoomPolicyDto>>
 |===
 |Name|Schema
 |**humidity** +
-__optional__|number (float)
+__optional__|number (double)
 |**humidityMargin** +
-__optional__|number (float)
+__optional__|number (double)
 |**id** +
 __optional__|integer (int64)
 |**illuminance** +
-__optional__|number (float)
+__optional__|integer (int32)
 |**illuminanceMargin** +
-__optional__|number (float)
-|**roomPolicies** +
-__optional__|< <<_roompolicydto,RoomPolicyDto>> > array
+__optional__|number (double)
 |**roomPolicyId** +
 __optional__|integer (int64)
 |**temperature** +
-__optional__|number (float)
+__optional__|number (double)
 |**temperatureMargin** +
-__optional__|number (float)
+__optional__|number (double)
 |===
 
 
@@ -252,6 +293,49 @@ __optional__|number (float)
 |Name|Schema
 |**data** +
 __required__|<<_expectedroomconditionsdto,ExpectedRoomConditionsDto>>
+|===
+
+
+[[_getpastpoliciescommand]]
+=== GetPastPoliciesCommand
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**historicMeasurements** +
+__optional__|< <<_historicmeasurement,HistoricMeasurement>> > array
+|**roomId** +
+__optional__|integer (int64)
+|===
+
+
+[[_historicmeasurement]]
+=== HistoricMeasurement
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**date** +
+__optional__|string (date-time)
+|**humidity** +
+__optional__|number (double)
+|**illuminance** +
+__optional__|integer (int32)
+|**temperature** +
+__optional__|number (double)
+|===
+
+
+[[_historicmeasurementroompolicydtotuple]]
+=== HistoricMeasurementRoomPolicyDtoTuple
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**item1** +
+__optional__|<<_historicmeasurement,HistoricMeasurement>>
+|**item2** +
+__optional__|<<_roompolicydto,RoomPolicyDto>>
 |===
 
 
@@ -269,6 +353,28 @@ __optional__|string
 |===
 
 
+[[_pastmeasurementsdto]]
+=== PastMeasurementsDto
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**measurements** +
+__optional__|< <<_historicmeasurementroompolicydtotuple,HistoricMeasurementRoomPolicyDtoTuple>> > array
+|===
+
+
+[[_pastmeasurementsdtojsonapidocument]]
+=== PastMeasurementsDtoJsonApiDocument
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**data** +
+__required__|<<_pastmeasurementsdto,PastMeasurementsDto>>
+|===
+
+
 [[_roompolicycategorydto]]
 === RoomPolicyCategoryDto
 
@@ -281,8 +387,6 @@ __optional__|integer (int32)
 __optional__|integer (int64)
 |**name** +
 __optional__|string
-|**roomPolicies** +
-__optional__|< <<_roompolicydto,RoomPolicyDto>> > array
 |===
 
 
@@ -298,6 +402,8 @@ __optional__|<<_roompolicycategorydto,RoomPolicyCategoryDto>>
 __optional__|integer (int64)
 |**endDate** +
 __optional__|string (date-time)
+|**endHour** +
+__optional__|integer (int32)
 |**expectedConditions** +
 __optional__|<<_expectedroomconditionsdto,ExpectedRoomConditionsDto>>
 |**expectedConditionsId** +
@@ -310,6 +416,8 @@ __optional__|string
 __optional__|integer (int64)
 |**startDate** +
 __optional__|string (date-time)
+|**startHour** +
+__optional__|integer (int32)
 |===
 
 
