--- a/src/DagAir_Sensors/DagAir.Sensors/swagger.adoc
+++ b/src/DagAir_Sensors/DagAir.Sensors/swagger.adoc
@@ -42,6 +42,84 @@ GET /sensors-api/sensors
 * Sensors
 
 
+[[_sensors-api_sensors_room-id_roomid_get]]
+=== GET /sensors-api/sensors/room-id/{roomId}
+
+==== Parameters
+
+[options="header", cols=".^2a,.^3a,.^4a"]
+|===
+|Type|Name|Schema
+|**Path**|**roomId** +
+__required__|integer (int64)
+|===
+
+
+==== Responses
+
+[options="header", cols=".^2a,.^14a,.^4a"]
+|===
+|HTTP Code|Description|Schema
+|**200**|Success|<<_sensordtojsonapidocument,SensorDtoJsonApiDocument>>
+|**404**|Not Found|<<_jsonapierror,JsonApiError>>
+|===
+
+
+==== Produces
+
+* `text/plain`
+* `application/json`
+* `text/json`
+
+
+==== Tags
+
+* Sensors
+
+
+[[_sensors-api_sensors_sensor-name_post]]
+=== POST /sensors-api/sensors/sensor-name
+
+==== Parameters
+
+[options="header", cols=".^2a,.^3a,.^4a"]
+|===
+|Type|Name|Schema
+|**Body**|**body** +
+__optional__|<<_getsensorbysensornamecommand,GetSensorBySensorNameCommand>>
+|===
+
+
+==== Responses
+
+[options="header", cols=".^2a,.^14a,.^4a"]
+|===
+|HTTP Code|Description|Schema
+|**200**|Success|<<_sensordtojsonapidocument,SensorDtoJsonApiDocument>>
+|**404**|Not Found|<<_jsonapierror,JsonApiError>>
+|===
+
+
+==== Consumes
+
+* `application/json-patch+json`
+* `application/json`
+* `text/json`
+* `application/*+json`
+
+
+==== Produces
+
+* `text/plain`
+* `application/json`
+* `text/json`
+
+
+==== Tags
+
+* Sensors
+
+
 [[_sensors-api_sensors_sensorid_get]]
 === Returns information about a sensor with a given sensorId
 ....
@@ -85,6 +163,17 @@ __required__|integer (int64)
 
 [[_definitions]]
 == Definitions
+
+[[_getsensorbysensornamecommand]]
+=== GetSensorBySensorNameCommand
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**sensorName** +
+__optional__|string
+|===
+
 
 [[_jsonapierror]]
 === JsonApiError
@@ -137,6 +226,8 @@ __optional__|integer (int64)
 __optional__|<<_sensormodeldto,SensorModelDto>>
 |**sensorModelId** +
 __optional__|integer (int64)
+|**sensorName** +
+__optional__|string
 |===
 
 
